2007-01-08  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* data/glade/form-signing-dialog.glade:
	* data/glade/prefs-dialog.glade:

	Removed the hardcoded invisible char, note that this might readd
	itself to the file if someone edits it. It has been suggested that we
	move over to glade-3. Patch by Vitali Ischenko. Bug #393910.

2007-01-03  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* embed/ephy-favicon-cache.c: (icon_is_obsolete),
	(remove_obsolete_icons):
	* embed/ephy-history.c: (page_is_obsolete),
	(remove_obsolete_pages):
	
	Avoid use of localtime by computing expiry in seconds instead of days.
	Patch by Chris Wilson.

2007-01-03  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* data/glade/prefs-dialog.glade:

	Corrects the expand of the Privacy tab in the Preferences window.
	Patch by Baptiste Mille-Mathias.

2007-01-03  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* data/mime-types-permissions.xml:

	Added text/csv as a safe type (note that the alias
	text/x-comma-separate-values is also present). Patch by Gaëtan
	Podevijn.

2006-12-31  Christian Persch  <chpe@svn.gnome.org>

	* src/ephy-main.c: (main):

	Make sure to init gthread as first call to glib.

2006-12-17  Christian Persch  <chpe@cvs.gnome.org>

	* data/epiphany-bookmarks-html.xsl:

	Fix bookmarks export to HTML. Bug #345925, patch by Stefan Stuhr.

2006-12-17  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c:
	(ephy_location_entry_style_set):

	Fix secure location bar colouring with dark themes. Bug #347343,
	patch by Diego Escalante Urrelo.

2006-12-14  Chhristian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:

	Don't warn before launching rtsp and mms[h] handlers.

2006-12-02  Christian Persch  <chpe@cvs.gnome.org>

	* data/epiphany-pango.schemas:

	Add "si" to locales always using pango. Patch by harshula@gmail.com,
	bug #361538.

2006-12-01  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:
